# ultimate64-manager

./: .gitignore  Cargo.toml  Cross.toml  LICENSE  Makefile  Makefile.unified  PROFILES.md  README.md  build.rs  ultimate64-manager.desktop
.cargo/: config.toml
.cross/: Dockerfile.x86_64-unknown-linux-gnu
.github/workflows/: rust.yml  windows-release.yml
icons/: icon.icns
src/: api.rs  archive.rs  assembly64.rs  assembly64_browser.rs  basic_editor.rs  basic_tokenizer.rs  cfg_format.rs  config_api.rs  config_editor.rs  config_presets.rs  csdb.rs  csdb_browser.rs  csdb_screenshots.rs  debug_stream.rs  device_error.rs  device_profile.rs  dir_preview.rs  discovery.rs  disk_image.rs  file_browser.rs  file_types.rs  folder_favorites.rs  ftp_ops.rs  game_mode.rs  integration.rs  keyboard_map.rs  main.rs  memory_editor.rs  mod_info.rs  music_ops.rs  music_player.rs  net_utils.rs  pdf_preview.rs  petscii.rs  port64.rs  profile_api.rs  profile_manager.rs  profile_repo.rs  profiles.rs  remote_browser.rs  (+19 more)
src/app/: connection.rs  copy.rs  device.rs  dragdrop.rs  machine.rs  mod.rs  settings.rs  window_modals.rs
src/app/view/: dialogs.rs  dual_pane.rs  mod.rs  settings.rs  status_bar.rs
tests/fixtures/: categories.json  presets.json
tools/: build-appimage.sh  build_oneload_library.py
windows/: build_installer.ps1  ultimate64-manager.iss
