[package]
name = "ultimate64-browser"
version = "0.1.0"
edition = "2021"

[dependencies]
iced = { version = "0.12", features = ["tokio", "image", "canvas"] }
tokio = { version = "1", features = ["full"] }
ultimate64 = "0.5.5"  # Assuming the library is in a subdirectory
anyhow = "1.0"
rfd = "0.15"  # For native file dialogs
walkdir = "2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dirs = "5.0"
rand = "0.8"
log = "0.4"
env_logger = "0.11"
url = "2.5"
image = "0.24" 
[target.'cfg(target_os = "windows")'.dependencies]
winapi = { version = "0.3", features = ["winuser"] }

[[bin]]
name = "ultimate64-browser"
path = "src/main.rs"