[package]
name = "ultimate64-manager"
version = "0.2.4"
edition = "2024"
description = "Ultimate64 Manager - Control your Ultimate64/Ultimate-II+"
authors = ["Marcin Spoczynski"]
license = "MIT"

[dependencies]
iced = { version = "0.12", features = ["tokio", "image", "canvas"] }
tokio = { version = "1", features = ["full"] }
ultimate64 = "0.5.5"
anyhow = "1.0"
rfd = "0.15"
walkdir = "2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dirs = "5.0"
rand = "0.8"
log = "0.4"
env_logger = "0.11"
url = "2.5"
image = { version = "0.24", features = ["ico", "png"] }
reqwest = { version = "0.11", features = ["blocking", "multipart", "json"] }
suppaftp = "6.0"
cpal = "0.15"
md5 = "0.7"
urlencoding = "2.1"

# Windows-specific dependencies
[target.'cfg(target_os = "windows")'.dependencies]
winapi = { version = "0.3", features = ["winuser"] }

# Windows-specific build dependencies
[target.'cfg(target_os = "windows")'.build-dependencies]
winres = "0.1"

# AppImage configuration (cargo appimage)
[package.metadata.appimage]
assets = ["icons/icon.png"]
auto_link = true
auto_link_exclude_list = [
    "libc.so*",
    "libdl.so*",
    "libpthread.so*",
    "libm.so*",
    "libgcc_s.so*",
    "librt.so*",
    "ld-linux*.so*",
]

[[bin]]
name = "ultimate64-manager"
path = "src/main.rs"

# Release optimizations
[profile.release]
opt-level = 3
lto = true

# macOS/Linux bundle configuration (cargo bundle)
[package.metadata.bundle]
name = "Ultimate64 Manager"
identifier = "com.ultimate64.manager"
icon = ["icons/icon.icns"]
version = "0.2.0"
copyright = "Copyright 2026"
category = "Utility"
short_description = "Control your Ultimate64/Ultimate-II+"
long_description = """
Ultimate64 Manager is a desktop application for managing your Ultimate64 
and Ultimate-II+ devices. Browse files, transfer games, control playback,
and more.
"""
# For macOS .app bundle
osx_minimum_system_version = "10.14"